[package]
name = "nidrs-cli"
version = "0.0.0"
authors = ["WumaCoder <wumacoder@gmail.com>"]
description = "a nidrs cli."
edition = "2021"
keywords = ["nidrs", "cli"]
categories = ["development-tools", "utilities", "system-programming", "command-line-utilities", "process-management"]
homepage = "https://github.com/nidrs/nidrs-cli.git"
repository = "https://github.com/nidrs/nidrs-cli.git"
license = "MIT"

[[bin]]
name = "nid"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
metamap = "0.3.0"
serde = "1.0.202"
toml = "0.8.13"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
insta = "1.39.0"
